# Edabit-Python-Questions

./: main.py  pyproject.toml
01_Very Easy/: 01_two_numbers_sum.py
01_Very Easy/Classes/: 01_video_streaming_plans.py
01_Very Easy/General/: 03_minutes_to_seconds.py
01_Very_Easy/Classes/: 02_make_a_circle_with_oop.py  03_older_than_me.py  04_simple_oop_calculator.py  main.py  pyproject.toml
01_Very_Easy/General/: 02_next_integer.py  06_hours_to_seconds.py  07_triangle_maximum_edge.py  08_remainder_from_two_num.py  main.py
01_very_easy/: pyproject.toml
01_very_easy/Classes/: 01_video_streaming_plans.py  02_make_a_circle_with_oop.py  04_simple_oop_calculator.py
01_very_easy/Conditions/: 01_boolean_to_string_convert.py
01_very_easy/classes/: 02_make_a_circle_with_oop.py  03_older_than_me.py
01_very_easy/conditions/: 01_boolean_to_string_convert.py
02_Easy/Control Flow/: main.py
02_Easy/General/: 01_stuttering_function.py
02_easy/Control_Flow/: pyproject.toml
02_easy/General/: 02_find_the_discount.py
02_easy/general/: 01_stuttering_function.py
03_Medium/: main.py  pyproject.toml
03_Medium/Conditions/: 01_adding_numbers.py  02_quadratic_equation.py  main.py
04_Hard/: main.py  pyproject.toml
05_Very Hard/: main.py
05_Very_Hard/: pyproject.toml
06_Expert/: main.py  pyproject.toml
Easy/: .gitignore  01_stuttering_function.py  02_find_the_discount.py  main.py  pyproject.toml
Very Easy/: 01_two_numbers_sum.py  02_next_integer.py  03_minutes_to_seconds.py  04_triangle_area.py  05_cube_buggy_code.py  main.py
(+3 files in other folders)
