[project]
name = "edabit-python-questions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "01_Very_Easy",
    "01_Very_Easy/General",
    "01_Very_Easy/Classes",
    "02_Easy",
    "02_Easy/General",
    "02_Easy/Control_Flow",
    "03_Medium",
    "03_Medium/Conditions",
    "04_Hard",
    "05_Very_Hard",
    "06_Expert",
    "05_Very Hard",
]
